# ProjectOptimizedRenderer

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  conanfile.txt  documentation.md  imgui.ini
.github/workflows/: build-and-release.yml  ci-main.yml  release-build.yml
cmake/: CheckMoltenVK.cmake  CompileShaders.cmake  Findvolk.cmake
include/core/: Camera.h  CommandBuffer.h  Device.h  FrameSync.h  Renderer.h  Swapchain.h  VulkanContext.h  VulkanUtil.h  Window.h
include/debug/: GPUTimer.h  ImGuiManager.h  LogSink.h  Screenshot.h
include/resource/: Buffer.h  Descriptor.h  GLTFLoader.h  GeometryFactory.h  Image.h  Material.h  Mesh.h  Model.h  PipelineLayout.h  ResourceSet.h  SamplerCache.h  SceneInfo.h  Shader.h  Texture.h  Vertex.h
shaders/: pbr.frag  pbr.vert  pbr_normals.frag  shadow.vert  shadow_blur.comp  shadow_vsm.frag  sky.frag  sky.vert  tonemap.frag  tonemap.vert  triangle.frag  triangle.vert
src/: main.cpp
src/core/: Camera.cpp  CommandBuffer.cpp  Device.cpp  FrameSync.cpp  Renderer.cpp  Swapchain.cpp  VulkanContext.cpp  VulkanUtil.cpp  Window.cpp
src/debug/: GPUTimer.cpp  ImGuiManager.cpp  LogSink.cpp  Screenshot.cpp
src/resource/: Buffer.cpp  Descriptor.cpp  GLTFLoader.cpp  Image.cpp  PipelineLayout.cpp  ResourceSet.cpp  SamplerCache.cpp  SceneInfo.cpp  Shader.cpp  StbImageImpl.cpp  Texture.cpp  VmaImpl.cpp
